# glitch-contracts

./: .gitignore  .gitmodules  README.md
hw_verifier/: CircuitGraph.py  ComplianceChecker.py  ContractCfg.py  SafeGraph.py  classes.py  defines.py  helpers.py  parallel.py  parse.py  requirements.txt  verify-contract.py
hw_verifier/smt/: __init__.py  bitwuzla.py  boolector.py  expr.py  solver.py  z3solver.py
sw_verifier/: CMakeLists.txt  cbmc2z3.py  contract_prepare.py
sw_verifier/contract/: contract.cpp  contract.h  contract_memory.cpp  rv_constants.h
sw_verifier/simulator-common/: Options.cpp  Options.h  common.cpp  common.h  contract_runtime.h  contract_runtime.tpp  contract_runtime_impl.cpp  main.cpp
sw_verifier/simulator-concrete/: CMakeLists.txt  SymbolicManager.h  bitvector.cpp  bitvector.h
sw_verifier/simulator-symbolic/: CMakeLists.txt  PropVarSet.cpp  PropVarSet.h  PropVarSet.txt  SatSolver.cpp  SatSolver.h  SatSolverIPASIR.cpp  SatSolverIPASIR.h  SatSolverKissat.cpp  SatSolverKissat.h  SymbolicExpression.cpp  SymbolicExpression.h  SymbolicManager.cpp  SymbolicManager.h  bitvector.cpp  bitvector.h  fragments.cpp  fragments.cpp.py
sw_verifier/smtgen-cbmc/: CMakeLists.txt  contract_runtime.h  leaks.cpp  leaks.cpp.py  leaks.h  main.cpp
